syntax = "proto3";

package io.su3.gkv.mesh.proto;

message KvGetRequest { bytes key = 1; }

message KvGetResponse {
  bytes value = 1;
  bool exists = 2;
}

message KvSetRequest {
  bytes key = 1;
  bytes value = 2;
  bool delete = 3;
}

message KvSetResponse {}

message KvListRequest {
  bytes start = 1;
  bytes end = 2;
  int32 limit = 3;
}

message KvListResponse {
  repeated KvListResponseEntry entries = 1;
}

message KvListResponseEntry {
  bytes key = 1;
  bytes value = 2;
}

message PeersResponse {
  repeated PeersResponseEntry peers = 1;
}

message PeersResponseEntry {
  string cluster_id = 1;
  string address = 2;
}

message AaePullRequest { string peer = 1; }

message AaePullResponse {}